<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.apps.nabungemas.ui.HomeFragment"
        android:label="fragment_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_addTransactionFragment"
            app:destination="@id/addTransactionFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/transactionFragment"
        android:name="com.apps.nabungemas.ui.TransactionFragment"
        android:label="@string/transaksi"
        tools:layout="@layout/fragment_transaction" >
        <action
            android:id="@+id/action_transactionFragment_to_addTransactionFragment"
            app:destination="@id/addTransactionFragment" />
    </fragment>
    <fragment
        android:id="@+id/savingFragment"
        android:name="com.apps.nabungemas.ui.SavingFragment"
        android:label="@string/tabungan"
        tools:layout="@layout/fragment_saving" >
        <action
            android:id="@+id/action_savingFragment_to_addSavingFragment"
            app:destination="@id/addSavingFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.apps.nabungemas.ui.AboutFragment"
        android:label="@string/tentang"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/addTransactionFragment"
        android:name="com.apps.nabungemas.ui.AddTransactionFragment"
        android:label="fragment_add_transaction"
        tools:layout="@layout/fragment_add_transaction" />
    <fragment
        android:id="@+id/addSavingFragment"
        android:name="com.apps.nabungemas.ui.AddSavingFragment"
        android:label="fragment_add_saving"
        tools:layout="@layout/fragment_add_saving" >
        <action
            android:id="@+id/action_addSavingFragment_to_savingFragment"
            app:destination="@id/savingFragment"
            app:popUpTo="@id/savingFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>