<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.AddSavingFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="Add Target"
                app:titleCentered="true"/>

        </com.google.android.material.appbar.AppBarLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_category_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/tv_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:hint="@string/category_saving"
                    app:hintTextColor="@color/grey_700"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <GridLayout
                android:id="@+id/target"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_category_label"
                android:columnCount="2">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_target_label"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:hint="@string/target_tabungan"
                    app:hintTextColor="@color/grey_700">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_target"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number"
                        android:singleLine="true" />


                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_margin="4dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_column="1"
                    android:text="@string/rupiah" />
            </GridLayout>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginTop="32dp"
                android:text="@string/save"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_cancel"
                app:layout_constraintTop_toBottomOf="@+id/target"
                app:cornerRadius="10dp"
                app:icon="@drawable/ic_save"
                app:iconGravity="textStart"
                app:iconPadding="10dp"
                app:iconSize="20dp" />

            <Button
                android:id="@+id/btn_cancel"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginEnd="16dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                app:layout_constraintEnd_toStartOf="@+id/btn_save"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btn_save"
                app:cornerRadius="10dp"
                app:icon="@drawable/ic_cancel"
                app:iconGravity="textStart"
                app:iconPadding="10dp"
                app:iconSize="20dp"
                app:strokeColor="@color/yellow_500"
                app:strokeWidth="2dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>




</ScrollView>